Minor readability fixes

--- a/src/components/CustomMember/CustomMember_0/CustomMember_0.scss
+++ b/src/components/CustomMember/CustomMember_0/CustomMember_0.scss
@@ -106,6 +106,10 @@
       background-color: $main-orangered;
     }
   }
+  & .MemberPage__description {
+    font-weight: 700;
+    text-shadow: 1px 1px 2px $main-white;
+  }
 }
 
 @keyframes colored-light {
