--- a/src/components/ProgramList/ProgramList.scss
+++ b/src/components/ProgramList/ProgramList.scss
@@ -7,6 +7,7 @@
     margin: 50px;
     text-transform: uppercase;
     padding: 5px 0 5px 30px;
+    border-left: 5px solid transparent;
     cursor: default;
   }
   &__location {
